--- a/templates/Noticias.html
+++ b/templates/Noticias.html
@@ -18,11 +18,11 @@
                 <div class="menu-item" onclick="window.location.href='/abrir_ecra_principal'">Início</div>
                 <div class="menu-item">Leaderboard</div>
                 <div class="menu-item" onclick="window.location.href='/abrir_noticias'">Notícias</div>
-                <div class="menu-item">Estatísticas</div>
+                <div class="menu-item" onclick="window.location.href='/abrir_stats'">Estatísticas</div>
                 <div class="menu-item" onclick="window.location.href='/abrir_esports'">Esports</div>
             </div>
             <div class="menu-item" onclick="window.location.href='/abrir_perfil'">
-                <a id="perfil">{{name}}</a>
+                <a id="perfil">{{nome}}</a>
             </div>
         </div>
         <div class="main">
