--- a/static/styles_vs_csgo.css
+++ b/static/styles_vs_csgo.css
@@ -110,74 +110,42 @@ body {
     overflow-y: auto; /* Allow vertical scroll */
 }
 
-.league-info {
+.csgo-stats {
     background-color: #46576F;
     border-radius: 8px;
     padding: 20px;
     width: 90%;
-    margin-bottom: 20px;
     color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
 }
 
 .separator {
-    width: 90%;
+    width: 100%;
     border: 0;
     height: 1px;
     background: #ccc;
     margin: 20px 0;
 }
 
-.league-entry {
+.stat-entry {
     margin-bottom: 10px;
 }
 
-.matches-container {
-    width: 90%;
-    max-height: 60vh; /* Adjust height as needed to fit within the viewport */
-    overflow-y: auto;
-}
-
-.match-card {
-    background-color: #46576F;
-    border-radius: 8px;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.match-header {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #4A5A72;
-    color: white;
+.stat-entry h3 {
     margin-bottom: 10px;
 }
 
-.teams {
-    display: flex;
-    justify-content: space-between;
+.stat-entry ul {
+    list-style-type: none;
+    padding: 0;
 }
 
-.team {
-    width: 45%;
-}
-
-.team h3 {
-    text-align: center;
-    color: white;
-    margin-bottom: 10px;
-}
-
-.player {
-    display: flex;
-    justify-content: space-between;
+.stat-entry li {
     padding: 5px 0;
     border-bottom: 1px solid #4A5A72;
-    color: white;
 }
 
-.player:last-child {
+.stat-entry li:last-child {
     border-bottom: none;
 }
