--- a/templates/vs.html
+++ b/templates/vs.html
@@ -10,27 +10,36 @@
     <div class="container">
         <div class="sidebar">
             <div class="icons">
-                <img src="{{ url_for('static', filename='images/lol.png') }}" alt="LoL">
-                <img src="{{ url_for('static', filename='images/cs.png') }}" alt="CS:GO">
-                <img src="{{ url_for('static', filename='images/Apex-Legends-Emblem.png') }}" alt="Apex">
+                <img src="../static/images/lol.png" alt="LoL">
+                <img src="../static/images/cs.png" alt="CS:GO">
+                <img src="../static/images/Apex-Legends-Emblem.png" alt="Apex">
             </div>
             <div class="menu">
                 <div class="menu-item" onclick="window.location.href='/abrir_ecra_principal'">Início</div>
                 <div class="menu-item">Leaderboard</div>
                 <div class="menu-item" onclick="window.location.href='/abrir_noticias'">Notícias</div>
-                <div class="menu-item">VS</div>
+                <div class="menu-item" onclick="window.location.href='/abrir_stats'">Estatísticas</div>
                 <div class="menu-item" onclick="window.location.href='/abrir_esports'">Esports</div>
             </div>
             <div class="menu-item" onclick="window.location.href='/abrir_perfil'">
-                <a id="perfil">{{ name }}</a>
+                <a id="perfil">{{nome}}</a>
             </div>
         </div>
         <div class="main">
+            <div class="main_logo">
+                <img src="{{ url_for('static', filename='images/logo.png') }}" alt="PlayerPulse Logo">
+                <span>PlayerPulse</span>
+            </div>
             <div class="search-bar">
-                <div class="main_logo">
-                    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="PlayerPulse Logo">
-                    <span>PlayerPulse</span>
-                </div>
+                <form action="/escolher_jogo" method="POST">
+                    <select name="game_choice" id="game_choice">
+                        <option value="lol">League of Legends</option>
+                        <option value="csgo">CS:GO</option>
+                        <option value="tft">TFT</option>
+                        <option value="steam">Steam</option>
+                    </select>
+                    <button type="submit">Selecionar Jogo</button>
+                </form>
             </div>
             <div class="content">
                 <div class="league-info">
